Bug: Streepje tussen woord in module-overzicht

--- a/ModuleManager.Web/Views/Help/Curriculum.cshtml
+++ b/ModuleManager.Web/Views/Help/Curriculum.cshtml
@@ -35,7 +35,7 @@
                 <p>Op deze pagina kunnen onderdelen aangemaakt, bekeken of verwijderd worden.</p>
 
                 <h3>Modules</h3>
-                <p>Op deze pagina kunnen modules aangemaakt of verwijderd worden. Bij het aanmaken worden enkele basis gegevens ingevoerd, zodat een teacher via het moduleoverzicht de mogelijkheid heeft om de modulegegevens verder aan te vullen.</p>
+                <p>Op deze pagina kunnen modules aangemaakt of verwijderd worden. Bij het aanmaken worden enkele basis gegevens ingevoerd, zodat een teacher via het module-overzicht de mogelijkheid heeft om de modulegegevens verder aan te vullen.</p>
 
 
 
