--- a/ModuleManager.Web/Views/Help/Homepage.cshtml
+++ b/ModuleManager.Web/Views/Help/Homepage.cshtml
@@ -11,14 +11,14 @@
 
                 <ul>
                     <li>Lessentabellen</li>
-                    <li>Module overzicht</li>
+                    <li>Module-overzicht</li>
                 </ul>
 
                 <h3>Lessentabellen</h3>
                 <p>Deze knop linkt naar een overzicht met alle lessentabellen van de opleiding.</p>
 
-                <h3>Module overzicht</h3>
-                <p>Deze knopt linkt naar het moduleoverzicht.</p>
+                <h3>Module-overzicht</h3>
+                <p>Deze knopt linkt naar het module-overzicht.</p>
 
             </div>
         </div>
