--- a/ModuleManager.Web/Views/Help/ModuleOverview.cshtml
+++ b/ModuleManager.Web/Views/Help/ModuleOverview.cshtml
@@ -20,7 +20,7 @@
                 <img src="~/Images/Help/Filter.png" height="100%" width="100%">
 
                 <h3>Resulaten weergave</h3>
-                <p>Het module overzicht kan geordend worden op verschillende manieren. Er kan aangegeven worden hoeveel resultaten er moeten worden weergegeven. Via de knop 'Weergave' kan gekozen worden welke eigenschappen van de modules weergegeven worden. Ook kan er geordend worden op eigenschap door de gewenste eigenschap boven de tabel aan te klikken.</p>
+                <p>Het module-overzicht kan geordend worden op verschillende manieren. Er kan aangegeven worden hoeveel resultaten er moeten worden weergegeven. Via de knop 'Weergave' kan gekozen worden welke eigenschappen van de modules weergegeven worden. Ook kan er geordend worden op eigenschap door de gewenste eigenschap boven de tabel aan te klikken.</p>
                 <img src="~/Images/Help/ModuleOverzichtWeergave.png" height="100%" width="100%">
 
                 <h3>Exporteren</h3>
