--- a/ModuleManager.Web/Views/Home/Index.cshtml
+++ b/ModuleManager.Web/Views/Home/Index.cshtml
@@ -4,7 +4,7 @@
         <!--<input name="search" type="text" class="form-control search-query ajax input-lg" placeholder="Zoekterm" />-->
         <div class="text-center">
             <a class="btn btn-default fa-button-big" href="@Url.Action("Index","StudieGids")"><i class="fa fa-table fa-big"></i><br />Lessentabellen</a>
-            <a class="btn btn-default fa-button-big" href="@Url.Action("Overview","Module")"><i class="fa fa-search fa-big"></i><br />Module Overzicht</a>
+            <a class="btn btn-default fa-button-big" href="@Url.Action("Overview","Module")"><i class="fa fa-search fa-big"></i><br />Module-overzicht</a>
         </div>
     </div>
 </div>
