Bug: Blokken werden niet goed ge-ordend in filters bij overview.

--- a/ModuleManager.Web/Views/Module/Overview.cshtml
+++ b/ModuleManager.Web/Views/Module/Overview.cshtml
@@ -159,9 +159,9 @@
                             <div class="panel-body">
 
                                 <select name="filters.blokken" class="form-control ajax" id="FilterBlokken" multiple>
-                                    @foreach (var blokken in Model.FilterOptions.Blokken)
+                                    @foreach (var blok in Model.FilterOptions.Blokken)
                                     {
-                                        <option>@blokken</option>
+                                        <option>@blok</option>
                                     }
                                 </select>
 
