--- a/ModuleManager.Web/Views/Module/Details.cshtml
+++ b/ModuleManager.Web/Views/Module/Details.cshtml
@@ -59,6 +59,7 @@
 
 <ol class="breadcrumb">
     <li><a href="@Url.Action("Index", "Home")">Home</a></li>
+    <li><a href="@Url.Action("Overview", "Module")">Module-overzicht</a></li>
     <li class="active">@Model.Naam</li>
 </ol>
 
