--- a/ModuleManager.Web/Views/Module/Overview.cshtml
+++ b/ModuleManager.Web/Views/Module/Overview.cshtml
@@ -3,7 +3,7 @@
 
 <ol class="breadcrumb">
     <li><a href="@Url.Action("Index", "Home")">Home</a></li>
-    <li class="active">Zoeken</li>
+    <li class="active">Module-overzicht</li>
 </ol>
 
 <h2>Zoekresultaten</h2>
