Bug: Breadcrumb niet goed bij admin

--- a/ModuleManager.Web/Views/Admin/Index.cshtml
+++ b/ModuleManager.Web/Views/Admin/Index.cshtml
@@ -1,5 +1,5 @@
 ﻿<ol class="breadcrumb">
-    <li><a href="@Url.Action("Index", "Admin")">Home</a></li>
+    <li><a href="@Url.Action("Index", "Home")">Home</a></li>
     <li class="active">Beheer</li>
 </ol>
 @if (ViewBag.Messages != null)
