--- a/ModuleManager.Web/Views/Admin/UserOverview.cshtml
+++ b/ModuleManager.Web/Views/Admin/UserOverview.cshtml
@@ -3,7 +3,7 @@
 @model ModuleManager.Web.ViewModels.AdminUserManagementViewModel
 
 <ol class="breadcrumb">
-    <li><a href="@Url.Action("Index", "Admin")">Home</a></li>
+    <li><a href="@Url.Action("Index", "Home")">Home</a></li>
     <li><a href="@Url.Action("Index", "Admin")">Beheer</a></li>
     <li class="active">Gebruikers</li>
 </ol>
