--- a/ModuleManager.Web/Views/Admin/Archive.cshtml
+++ b/ModuleManager.Web/Views/Admin/Archive.cshtml
@@ -1,7 +1,7 @@
 ﻿@model ModuleManager.Web.ViewModels.AdminArchiverenViewModel 
         
 <ol class="breadcrumb">
-    <li><a href="@Url.Action("Index", "Admin")">Home</a></li>
+    <li><a href="@Url.Action("Index", "Home")">Home</a></li>
     <li><a href="@Url.Action("Index", "Admin")">Beheer</a></li>
     <li class="active">Archiveren</li>
 </ol>
