--- a/ModuleManager.Web/Views/Admin/CheckModules.cshtml
+++ b/ModuleManager.Web/Views/Admin/CheckModules.cshtml
@@ -1,7 +1,7 @@
 ﻿@using ModuleManager.Web.Helpers
 @model ModuleManager.Web.ViewModels.CheckModulesViewModel
 <ol class="breadcrumb">
-    <li><a href="@Url.Action("Index", "Admin")">Home</a></li>
+    <li><a href="@Url.Action("Index", "Home")">Home</a></li>
     <li><a href="@Url.Action("Index", "Admin")">Beheer</a></li>
     <li class="active">Module Controle</li>
 </ol>
