--- a/ModuleManager.Web/Views/Admin/Index.cshtml
+++ b/ModuleManager.Web/Views/Admin/Index.cshtml
@@ -18,6 +18,11 @@
 <h3>Curriculum</h3>
 <div class="row">
     <div class="col-md-3 category">
+        <a class="btn btn-lg btn-primary btn-block" href="@Url.Action("Index", "Competenties")">
+            <i class="fa fa-cogs"></i> Beheer Competenties
+        </a>
+    </div>
+    <div class="col-md-3 category">
         <a class="btn btn-lg btn-primary btn-block" href="@Url.Action("Curriculum", "Admin")">
             <i class="fa fa-cogs"></i> Beheer Curriculum
         </a>
